--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/UI/logo2.png" />
+    <link rel="icon" type="image/svg+xml" href="/UI/logo2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ENIGMA | A LUGVITC CTF EVENT</title>
     <meta name="description" content="A CTF Event Divided into two main segments, a Jeopardy Style CTF and an Attack-Defense Style CTF, participants will face challenges, learn, and compete for exciting prizes.">
