--- a/index.html
+++ b/index.html
@@ -1,18 +1,49 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script> -->
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/UI/logo2.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ENIGMA | A LUGVITC CTF EVENT</title>
-    <meta
-      name="description"
-      content="A CTF Event Divided into two main segments, a Jeopardy Style CTF and an Attack-Defense Style CTF, participants will face challenges, learn, and compete for exciting prizes."
-    />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <!-- <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script> -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ENIGMA | A LUGVITC CTF EVENT</title>
+  <meta name="description"
+    content="A CTF Event Divided into two main segments, a Jeopardy Style CTF and an Attack-Defense Style CTF, participants will face challenges, learn, and compete for exciting prizes." />
+  <meta name="keywords" content="ctf, tech, capture the flag, attack and defense, lugvitc, linux club">
+  <meta name="rating" content="general">
+
+  <!-- Favicons -->
+  <link rel="icon" type="image/svg+xml" href="/UI/logo2.png" />
+  <link rel="apple-touch-icon" href="/UI/logo2.png">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="ENIGMA">
+  <meta property="og:description"
+    content="A CTF Event Divided into two main segments, a Jeopardy Style CTF and an Attack-Defense Style CTF, participants will face challenges, learn, and compete for exciting prizes.">
+  <meta property="og:image" content="https://enigma.lugvitc.net/UI/logo2.png">
+
+  <!-- Theme -->
+  <meta name="theme-color" content="#111111">
+  <meta name="color-scheme" content="dark light">
+
+  <!-- Translation Preventions -->
+  <meta http-equiv="x-dns-prefetch-control" content="off">
+
+  <!-- Security -->
+  <meta http-equiv="X-Frame-Options" content="DENY">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="touch-action" content="manipulation">
+
+  <!-- What are you trying to do here, huh? go away  -->
+
+  <!-- Google go awayyy -->
+  <meta name="googlebot" content="render-after-prerender">
+  <meta name="google" content="notranslate">
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
